--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -11,3 +11,4 @@ deployment:
     - /bin/cp -R application $DEPLOYPATH
     - /bin/cp -R system $DEPLOYPATH
     - /bin/cp -R user_guide $DEPLOYPATH
+    - /bin/cp -R assets $DEPLOYPATH
